<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="info.muge.appshare.activities.MainActivity">

    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/icon_sort"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view"
        android:title="@string/action_view"
        android:icon="@drawable/icon_view_module"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/icon_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/nav_about"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never"/>

</menu>
