<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="24dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:textColor="?attr/colorPrimary"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:text="@string/dialog_loading_selection_att"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_permissions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_permissions"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_activities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_activities"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_services"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_receivers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_receivers"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_providers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_providers"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_apk_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_signature"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_file_hash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_file_hash"
            app:buttonTint="?attr/colorPrimary"/>
            
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/loading_static_loaders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:paddingStart="8dp"
            android:text="@string/dialog_loading_selection_static_loaders"
            app:buttonTint="?attr/colorPrimary"/>
    </LinearLayout>
</ScrollView>
