<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_default"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_ascending_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_ascending_name"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_descending_appname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_descending_name"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_ascending_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_ascending_package_name"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_descending_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_descending_package_name"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_ascending_appsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_ascending_size"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_descending_appsize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_descending_size"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_ascending_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_ascending_date"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_descending_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_descending_date"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_ascending_install_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_ascending_install_date"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sort_ra_descending_install_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/dialog_sort_descending_install_date"/>
    </LinearLayout>

</ScrollView>
