<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorFirstAttention"
        android:text="@string/dialog_compress_extension_att"/>
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compress_zip"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:text="@string/word_zip"/>
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compress_xapk"
        android:textSize="16sp"
        android:layout_margin="10dp"
        android:text="@string/word_xapk"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/compress_custom"
            android:textSize="16sp"
            android:text="@string/word_custom"/>
        <EditText
            android:id="@+id/compress_custom_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:singleLine="true"
            android:enabled="false"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789"
            android:hint="@string/hint_compress_custom"/>
    </LinearLayout>
</LinearLayout>